# hyazinth

./: README.md  pyproject.toml
.github/workflows/: django.yml
hyazinth/: manage.py
hyazinth/accounts/: urls.py  views.py
hyazinth/accounts/migrations/: 0001_initial.py  0002_delete_userprofile.py
hyazinth/fahrten/: apps.py  forms.py  models.py  urls.py  views.py
hyazinth/fahrten/migrations/: 0001_initial.py  0002_alter_pfadfinderfahrt_motto_and_more.py  0003_anmeldung.py  0004_pfadfinderfahrt_bild.py
hyazinth/fahrten/tests/: test_models.py
hyazinth/hyazinth/: asgi.py  settings.py  urls.py  wsgi.py
hyazinth/static/css/: style.css
hyazinth/templates/: base.html  home.html
hyazinth/templates/base/: navbar.html  toast.html
hyazinth/templates/fahrten/: anmeldung_confirm_delete.html  anmeldung_form.html  anmeldung_list.html  fahrt_confirm_delete.html  fahrt_detail.html  fahrt_form.html  fahrt_list.html
hyazinth/templates/registration/: login.html  profile.html  signup.html
